pyapp-deploy-eks.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pyapp
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      containers:
      - name: pyapp
        image: 211223789150.dkr.ecr.us-east-1.amazonaws.com/my-docker-repo
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
#Service for Pyapp - Type:Loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
