ingress-pyapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyapp-ingress
  labels:
    app: pyapp
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: pyapp-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
spec:
  defaultBackend:
    service:
      name: pyapp-nodeport-service
      port:
        number: 8080
